autogen/NIParser.cpp

// Generated from grammars/NIParser.g4 by ANTLR 4.9


#include "NIParserListener.h"
#include "NIParserVisitor.h"

#include "NIParser.h"


using namespace antlrcpp;
using namespace antlr4;

NIParser::NIParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

NIParser::~NIParser() {
  delete _interpreter;
}

std::string NIParser::getGrammarFileName() const {
  return "NIParser.g4";
}

const std::vector<std::string>& NIParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& NIParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

NIParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NIParser::Begin_endContext* NIParser::ProgContext::begin_end() {
  return getRuleContext<NIParser::Begin_endContext>(0);
}

tree::TerminalNode* NIParser::ProgContext::DOT() {
  return getToken(NIParser::DOT, 0);
}

tree::TerminalNode* NIParser::ProgContext::EOF() {
  return getToken(NIParser::EOF, 0);
}

NIParser::Var_specsContext* NIParser::ProgContext::var_specs() {
  return getRuleContext<NIParser::Var_specsContext>(0);
}


size_t NIParser::ProgContext::getRuleIndex() const {
  return NIParser::RuleProg;
}

void NIParser::ProgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProg(this);
}

void NIParser::ProgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProg(this);
}


antlrcpp::Any NIParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NIParserVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

NIParser::ProgContext* NIParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, NIParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NIParser::VAR) {
      setState(42);
      var_specs();
    }
    setState(45);
    begin_end();
    setState(46);
    match(NIParser::DOT);
    setState(47);
    match(NIParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpContext ------------------------------------------------------------------

NIParser::ExpContext::ExpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NIParser::Minus_expContext* NIParser::ExpContext::minus_exp() {
  return getRuleContext<NIParser::Minus_expContext>(0);
}

NIParser::Not_expContext* NIParser::ExpContext::not_exp() {
  return getRuleContext<NIParser::Not_expContext>(0);
}

NIParser::Binop_expContext* NIParser::ExpContext::binop_exp() {
  return getRuleContext<NIParser::Binop_expContext>(0);
}

NIParser::Bool_binop_expContext* NIParser::ExpContext::bool_binop_exp() {
  return getRuleContext<NIParser::Bool_binop_expContext>(0);
}

NIParser::TermContext* NIParser::ExpContext::term() {
  return getRuleContext<NIParser::TermContext>(0);
}


size_t NIParser::ExpContext::getRuleIndex() const {
  return NIParser::RuleExp;
}

void NIParser::ExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExp(this);
}

void NIParser::ExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExp(this);
}


antlrcpp::Any NIParser::ExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NIParserVisitor*>(visitor))
    return parserVisitor->visitExp(this);
  else
    return visitor->visitChildren(this);
}

NIParser::ExpContext* NIParser::exp() {
  ExpContext *_localctx = _tracker.createInstance<ExpContext>(_ctx, getState());
  enterRule(_localctx, 2, NIParser::RuleExp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(54);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(49);
      minus_exp();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(50);
      not_exp();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(51);
      binop_exp();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(52);
      bool_binop_exp();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(53);
      term();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TermContext ------------------------------------------------------------------

NIParser::TermContext::TermContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NIParser::Par_expContext* NIParser::TermContext::par_exp() {
  return getRuleContext<NIParser::Par_expContext>(0);
}

NIParser::Int_termContext* NIParser::TermContext::int_term() {
  return getRuleContext<NIParser::Int_termContext>(0);
}

NIParser::Bool_termContext* NIParser::TermContext::bool_term() {
  return getRuleContext<NIParser::Bool_termContext>(0);
}

NIParser::Ident_termContext* NIParser::TermContext::ident_term() {
  return getRuleContext<NIParser::Ident_termContext>(0);
}


size_t NIParser::TermContext::getRuleIndex() const {
  return NIParser::RuleTerm;
}

void NIParser::TermContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTerm(this);
}

void NIParser::TermContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTerm(this);
}


antlrcpp::Any NIParser::TermContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NIParserVisitor*>(visitor))
    return parserVisitor->visitTerm(this);
  else
    return visitor->visitChildren(this);
}

NIParser::TermContext* NIParser::term() {
  TermContext *_localctx = _tracker.createInstance<TermContext>(_ctx, getState());
  enterRule(_localctx, 4, NIParser::RuleTerm);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(60);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case NIParser::LPAR: {
        enterOuterAlt(_localctx, 1);
        setState(56);
        par_exp();
        break;
      }

      case NIParser::Int: {
        enterOuterAlt(_localctx, 2);
        setState(57);
        int_term();
        break;
      }

      case NIParser::Bool: {
        enterOuterAlt(_localctx, 3);
        setState(58);
        bool_term();
        break;
      }

      case NIParser::Ident: {
        enterOuterAlt(_localctx, 4);
        setState(59);
        ident_term();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Int_termContext ------------------------------------------------------------------

NIParser::Int_termContext::Int_termContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NIParser::Int_termContext::Int() {
  return getToken(NIParser::Int, 0);
}


size_t NIParser::Int_termContext::getRuleIndex() const {
  return NIParser::RuleInt_term;
}

void NIParser::Int_termContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInt_term(this);
}

void NIParser::Int_termContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInt_term(this);
}


antlrcpp::Any NIParser::Int_termContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NIParserVisitor*>(visitor))
    return parserVisitor->visitInt_term(this);
  else
    return visitor->visitChildren(this);
}

NIParser::Int_termContext* NIParser::int_term() {
  Int_termContext *_localctx = _tracker.createInstance<Int_termContext>(_ctx, getState());
  enterRule(_localctx, 6, NIParser::RuleInt_term);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    match(NIParser::Int);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Bool_termContext ------------------------------------------------------------------

NIParser::Bool_termContext::Bool_termContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NIParser::Bool_termContext::Bool() {
  return getToken(NIParser::Bool, 0);
}


size_t NIParser::Bool_termContext::getRuleIndex() const {
  return NIParser::RuleBool_term;
}

void NIParser::Bool_termContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBool_term(this);
}

void NIParser::Bool_termContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBool_term(this);
}


antlrcpp::Any NIParser::Bool_termContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NIParserVisitor*>(visitor))
    return parserVisitor->visitBool_term(this);
  else
    return visitor->visitChildren(this);
}

NIParser::Bool_termContext* NIParser::bool_term() {
  Bool_termContext *_localctx = _tracker.createInstance<Bool_termContext>(_ctx, getState());
  enterRule(_localctx, 8, NIParser::RuleBool_term);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(NIParser::Bool);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Ident_termContext ------------------------------------------------------------------

NIParser::Ident_termContext::Ident_termContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NIParser::Ident_termContext::Ident() {
  return getToken(NIParser::Ident, 0);
}


size_t NIParser::Ident_termContext::getRuleIndex() const {
  return NIParser::RuleIdent_term;
}

void NIParser::Ident_termContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdent_term(this);
}

void NIParser::Ident_termContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdent_term(this);
}


antlrcpp::Any NIParser::Ident_termContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NIParserVisitor*>(visitor))
    return parserVisitor->visitIdent_term(this);
  else
    return visitor->visitChildren(this);
}

NIParser::Ident_termContext* NIParser::ident_term() {
  Ident_termContext *_localctx = _tracker.createInstance<Ident_termContext>(_ctx, getState());
  enterRule(_localctx, 10, NIParser::RuleIdent_term);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(NIParser::Ident);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Par_expContext ------------------------------------------------------------------

NIParser::Par_expContext::Par_expContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NIParser::Par_expContext::LPAR() {
  return getToken(NIParser::LPAR, 0);
}

NIParser::ExpContext* NIParser::Par_expContext::exp() {
  return getRuleContext<NIParser::ExpContext>(0);
}

tree::TerminalNode* NIParser::Par_expContext::RPAR() {
  return getToken(NIParser::RPAR, 0);
}


size_t NIParser::Par_expContext::getRuleIndex() const {
  return NIParser::RulePar_exp;
}

void NIParser::Par_expContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPar_exp(this);
}

void NIParser::Par_expContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPar_exp(this);
}


antlrcpp::Any NIParser::Par_expContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NIParserVisitor*>(visitor))
    return parserVisitor->visitPar_exp(this);
  else
    return visitor->visitChildren(this);
}

NIParser::Par_expContext* NIParser::par_exp() {
  Par_expContext *_localctx = _tracker.createInstance<Par_expContext>(_ctx, getState());
  enterRule(_localctx, 12, NIParser::RulePar_exp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(NIParser::LPAR);
    setState(69);
    exp();
    setState(70);
    match(NIParser::RPAR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Not_expContext ------------------------------------------------------------------

NIParser::Not_expContext::Not_expContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NIParser::Not_expContext::NOT() {
  return getToken(NIParser::NOT, 0);
}

NIParser::ExpContext* NIParser::Not_expContext::exp() {
  return getRuleContext<NIParser::ExpContext>(0);
}


size_t NIParser::Not_expContext::getRuleIndex() const {
  return NIParser::RuleNot_exp;
}

void NIParser::Not_expContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNot_exp(this);
}

void NIParser::Not_expContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNot_exp(this);
}


antlrcpp::Any NIParser::Not_expContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NIParserVisitor*>(visitor))
    return parserVisitor->visitNot_exp(this);
  else
    return visitor->visitChildren(this);
}

NIParser::Not_expContext* NIParser::not_exp() {
  Not_expContext *_localctx = _tracker.createInstance<Not_expContext>(_ctx, getState());
  enterRule(_localctx, 14, NIParser::RuleNot_exp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    match(NIParser::NOT);
    setState(73);
    exp();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Minus_expContext ------------------------------------------------------------------

NIParser::Minus_expContext::Minus_expContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NIParser::Minus_expContext::MINUS() {
  return getToken(NIParser::MINUS, 0);
}

NIParser::ExpContext* NIParser::Minus_expContext::exp() {
  return getRuleContext<NIParser::ExpContext>(0);
}


size_t NIParser::Minus_expContext::getRuleIndex() const {
  return NIParser::RuleMinus_exp;
}

void NIParser::Minus_expContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMinus_exp(this);
}

void NIParser::Minus_expContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMinus_exp(this);
}


antlrcpp::Any NIParser::Minus_expContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NIParserVisitor*>(visitor))
    return parserVisitor->visitMinus_exp(this);
  else
    return visitor->visitChildren(this);
}

NIParser::Minus_expContext* NIParser::minus_exp() {
  Minus_expContext *_localctx = _tracker.createInstance<Minus_expContext>(_ctx, getState());
  enterRule(_localctx, 16, NIParser::RuleMinus_exp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    match(NIParser::MINUS);
    setState(76);
    exp();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Binop_expContext ------------------------------------------------------------------

NIParser::Binop_expContext::Binop_expContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NIParser::TermContext* NIParser::Binop_expContext::term() {
  return getRuleContext<NIParser::TermContext>(0);
}

NIParser::ExpContext* NIParser::Binop_expContext::exp() {
  return getRuleContext<NIParser::ExpContext>(0);
}

tree::TerminalNode* NIParser::Binop_expContext::TIMES() {
  return getToken(NIParser::TIMES, 0);
}

tree::TerminalNode* NIParser::Binop_expContext::DIV() {
  return getToken(NIParser::DIV, 0);
}

tree::TerminalNode* NIParser::Binop_expContext::PLUS() {
  return getToken(NIParser::PLUS, 0);
}

tree::TerminalNode* NIParser::Binop_expContext::MINUS() {
  return getToken(NIParser::MINUS, 0);
}

tree::TerminalNode* NIParser::Binop_expContext::EQ() {
  return getToken(NIParser::EQ, 0);
}

tree::TerminalNode* NIParser::Binop_expContext::NEQ() {
  return getToken(NIParser::NEQ, 0);
}

tree::TerminalNode* NIParser::Binop_expContext::LEQ() {
  return getToken(NIParser::LEQ, 0);
}

tree::TerminalNode* NIParser::Binop_expContext::GEQ() {
  return getToken(NIParser::GEQ, 0);
}

tree::TerminalNode* NIParser::Binop_expContext::GT() {
  return getToken(NIParser::GT, 0);
}

tree::TerminalNode* NIParser::Binop_expContext::LT() {
  return getToken(NIParser::LT, 0);
}


size_t NIParser::Binop_expContext::getRuleIndex() const {
  return NIParser::RuleBinop_exp;
}

void NIParser::Binop_expContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBinop_exp(this);
}

void NIParser::Binop_expContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBinop_exp(this);
}


antlrcpp::Any NIParser::Binop_expContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NIParserVisitor*>(visitor))
    return parserVisitor->visitBinop_exp(this);
  else
    return visitor->visitChildren(this);
}

NIParser::Binop_expContext* NIParser::binop_exp() {
  Binop_expContext *_localctx = _tracker.createInstance<Binop_expContext>(_ctx, getState());
  enterRule(_localctx, 18, NIParser::RuleBinop_exp);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(90);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(78);
      term();
      setState(79);
      _la = _input->LA(1);
      if (!(_la == NIParser::TIMES

      || _la == NIParser::DIV)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(80);
      exp();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(82);
      term();
      setState(83);
      _la = _input->LA(1);
      if (!(_la == NIParser::PLUS

      || _la == NIParser::MINUS)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(84);
      exp();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(86);
      term();
      setState(87);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << NIParser::LT)
        | (1ULL << NIParser::GT)
        | (1ULL << NIParser::LEQ)
        | (1ULL << NIParser::GEQ)
        | (1ULL << NIParser::EQ)
        | (1ULL << NIParser::NEQ))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(88);
      exp();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Bool_binop_expContext ------------------------------------------------------------------

NIParser::Bool_binop_expContext::Bool_binop_expContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NIParser::TermContext* NIParser::Bool_binop_expContext::term() {
  return getRuleContext<NIParser::TermContext>(0);
}

tree::TerminalNode* NIParser::Bool_binop_expContext::AND() {
  return getToken(NIParser::AND, 0);
}

NIParser::ExpContext* NIParser::Bool_binop_expContext::exp() {
  return getRuleContext<NIParser::ExpContext>(0);
}

tree::TerminalNode* NIParser::Bool_binop_expContext::OR() {
  return getToken(NIParser::OR, 0);
}


size_t NIParser::Bool_binop_expContext::getRuleIndex() const {
  return NIParser::RuleBool_binop_exp;
}

void NIParser::Bool_binop_expContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBool_binop_exp(this);
}

void NIParser::Bool_binop_expContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBool_binop_exp(this);
}


antlrcpp::Any NIParser::Bool_binop_expContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NIParserVisitor*>(visitor))
    return parserVisitor->visitBool_binop_exp(this);
  else
    return visitor->visitChildren(this);
}

NIParser::Bool_binop_expContext* NIParser::bool_binop_exp() {
  Bool_binop_expContext *_localctx = _tracker.createInstance<Bool_binop_expContext>(_ctx, getState());
  enterRule(_localctx, 20, NIParser::RuleBool_binop_exp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(100);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(92);
      term();
      setState(93);
      match(NIParser::AND);
      setState(94);
      exp();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(96);
      term();
      setState(97);
      match(NIParser::OR);
      setState(98);
      exp();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

NIParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NIParser::AssignmentContext* NIParser::StatContext::assignment() {
  return getRuleContext<NIParser::AssignmentContext>(0);
}

NIParser::If_then_elseContext* NIParser::StatContext::if_then_else() {
  return getRuleContext<NIParser::If_then_elseContext>(0);
}

NIParser::If_thenContext* NIParser::StatContext::if_then() {
  return getRuleContext<NIParser::If_thenContext>(0);
}

NIParser::While_loopContext* NIParser::StatContext::while_loop() {
  return getRuleContext<NIParser::While_loopContext>(0);
}

NIParser::PrintContext* NIParser::StatContext::print() {
  return getRuleContext<NIParser::PrintContext>(0);
}

NIParser::Begin_endContext* NIParser::StatContext::begin_end() {
  return getRuleContext<NIParser::Begin_endContext>(0);
}


size_t NIParser::StatContext::getRuleIndex() const {
  return NIParser::RuleStat;
}

void NIParser::StatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStat(this);
}

void NIParser::StatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStat(this);
}


antlrcpp::Any NIParser::StatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NIParserVisitor*>(visitor))
    return parserVisitor->visitStat(this);
  else
    return visitor->visitChildren(this);
}

NIParser::StatContext* NIParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 22, NIParser::RuleStat);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(108);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(102);
      assignment();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(103);
      if_then_else();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(104);
      if_then();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(105);
      while_loop();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(106);
      print();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(107);
      begin_end();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

NIParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NIParser::AssignmentContext::Ident() {
  return getToken(NIParser::Ident, 0);
}

tree::TerminalNode* NIParser::AssignmentContext::ASSIGN() {
  return getToken(NIParser::ASSIGN, 0);
}

NIParser::ExpContext* NIParser::AssignmentContext::exp() {
  return getRuleContext<NIParser::ExpContext>(0);
}


size_t NIParser::AssignmentContext::getRuleIndex() const {
  return NIParser::RuleAssignment;
}

void NIParser::AssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment(this);
}

void NIParser::AssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NIParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment(this);
}


antlrcpp::Any NIParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NIParserVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}

NIParser::AssignmentContext* NIParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 24, NIParser::RuleAssignment);
